# testin

gitview/: .gitignore  LICENSE  README.md  gitview.py  pyproject.toml
gitview/gitview/: __init__.py  __main__.py  repo.py  server.py
gitview/gitview/static/: app.js  index.html  style.css
gitview/tests/: test_repo.py
